Added styling for header

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,4 +1,13 @@
 @media (max-width: 36em) {
+    header {
+        padding-top: 1rem;
+        flex-direction: column;
+    }
+
+    .no-desktop {
+        display: flex;
+    }
+
     .hamburger-menu {
         display: flex;
     }
@@ -14,4 +23,20 @@
     nav {
         display: none;
     }
+
+    .mobile-menu {
+        display: none;
+
+        flex: 1;
+        justify-content: center;
+        align-items: flex-start;
+
+        padding-top: 4rem;
+    }
+
+    .mobile-menu li {
+        font-size: 2rem;
+        padding-top: 2rem;
+    }
+    
 }
