--- a/style/style.css
+++ b/style/style.css
@@ -49,7 +49,7 @@ header {
     top: 0;
     right: 0;
     left: 0;
-    
+
     height: 4rem;
 
     padding: 0 1rem;
@@ -111,7 +111,7 @@ nav {
 }
 
 main {
-    padding: 0 1rem;
+    padding: 4rem 1rem 0 1rem;
 }
 
 .text-container {
